--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "spamguard-ai",
-  "version": "1.0.0",
+  "name": "spamguard-ai-fixed",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lucide-react": "^0.460.0",
-    "web-vitals": "^4.2.4"
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.1"
+    "@azure/msal-browser": "^3.5.0",
+    "@azure/msal-react": "^2.0.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +24,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ],
     "rules": {
       "no-unused-vars": "warn"
